# To-do-app

./: .env.example  Dockerfile  main.py  pyproject.toml  test.py
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: login.py  projects.py  users.py
app/core/: config.py  db.py  security.py
src/: main.py
src/auth/: __init__.py  service.py  settings.py
src/projects/: __init__.py  service.py
src/tasks/: __init__.py  service.py  services.py
